# TESTEDR

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_SUMMARY.md  CHANGES_SUMMARY.md  Cargo.toml  Cargo_android.toml  FLUTTER_INTEGRATION_ROADMAP.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  ROADMAP.md  TUTORIAL.md  async_Readme.md  build.rs  build_android.sh  enum_check.afml  feature_check.afml  nohup.out
android/AFNSRuntime/: build.gradle.kts  settings.gradle.kts
android/AFNSRuntime/app/: build.gradle.kts
apexforge-nightscript-vscode/: CHANGELOG.md  README.md  apexforge-nightscript-0.1.0.vsix  extension.js  language-configuration.json  package-lock.json  package.json
apexforge-nightscript-vscode/fileicons/: icon-theme.json
apexforge-nightscript-vscode/snippets/: nightScript.json
apexforge-nightscript-vscode/syntaxes/: nightScript.tmLanguage.json
apexrc/: Apex.toml
apexrc/src/: lockfile.rs  main.rs  package_archive.rs  resolver.rs  user_config.rs  vendor_index.rs
apexrc/src/commands/: build.rs  check.rs  clean.rs  deps.rs  doctor.rs  init.rs  install.rs  login.rs  mod.rs  new.rs  perf.rs  publish.rs  registry.rs  run.rs  single.rs  uninstall.rs  web.rs  whoami.rs
assets/branding/: README.md  logo_config.toml
docs/: COMPILER_ARCHITECTURE.md  ROADMAP.md  gui_web_no_wasm.md
examples/: android_test.afml  async_basic_sleep.afml  async_basic_spawn.afml  async_chaining.afml  async_parallel.afml  async_spawn_cancel.afml  async_timeout.afml  basic.afml  collections.afml  control_flow.afml  error_handling.afml  flutter_engine_demo.afml  flutter_test.afml  flutter_ui.afml  flutter_vm_test.afml  for_test.afml  performance_test.afml  test_async_basic.afml  test_async_phase3.afml  test_indexing.afml  test_map.afml  test_methods.afml  test_simple_async.afml  web_test.afml
examples/app_with_libs/: Apex.toml  README.md
examples/arrays_basic/: Apex.toml
examples/check_basics/: Apex.toml  README.md
examples/check_guards/: Apex.toml  README.md
examples/control_flow_if/: Apex.toml  README.md
examples/control_flow_if_else_if/: Apex.toml  README.md
examples/custom_generic_type/: Apex.toml  README.md
examples/db_postgres/: Apex.toml  README.md
examples/db_redis/: Apex.toml  README.md
examples/db_sqlite/: .gitignore  Apex.toml  README.md
examples/enum_match/: Apex.toml
examples/forge_error_basic/: Apex.toml
examples/fs_advanced/: Apex.toml  README.md
examples/fs_basic/: Apex.toml  README.md
examples/functions_basic/: Apex.toml
examples/generics_basic/: Apex.toml  README.md
examples/generics_collections/: Apex.toml  README.md
examples/loop_break_continue/: Apex.toml  README.md
examples/map_basic/: Apex.toml
examples/math_basic/: Apex.toml  README.md
examples/method_self_rules/: Apex.toml
examples/minimal_hello/: Apex.toml  README.md
examples/modules_python_style/: Apex.toml  README.md
examples/nested_vec/: Apex.toml
examples/net_udp_loopback/: Apex.toml  README.md
examples/question_mark/: Apex.toml
examples/registry_demo/: README.md
examples/result_option_basic/: Apex.toml
examples/scopes_shadowing/: Apex.toml
examples/set_basic/: Apex.toml
examples/set_ops/: Apex.toml
examples/struct_basic/: Apex.toml
examples/switch_match_basic/: Apex.toml  README.md
examples/trait_display/: Apex.toml
examples/try_catch_basic/: Apex.toml
examples/tuple_basic/: Apex.toml
examples/ui/: basic_app.afml  container_spacer.afml  phase3_nested_layout.afml  phase3_showcase.afml  row_layout.afml
examples/ui_all_widgets/: Apex.toml
examples/ui_counter/: Apex.toml
examples/ui_hello/: Apex.toml
examples/ui_layout/: Apex.toml
examples/vec_basic/: Apex.toml
examples/word_count/: Apex.toml
flutter_src/: .gclient
nightscript-server/: Cargo.toml  registry.db  rust-toolchain.toml
nightscript-server/migrations/: 0001_init.sql  0002_yanks_owners.sql  0003_targets_metadata.sql
nightscript-server/src/: api.rs  auth.rs  db.rs  error.rs  main.rs  models.rs  storage.rs  templates.rs
nightscript-server/templates/: error.html  index.html  layout.html  login.html  owner.html  package.html  packages.html
scripts/: afns_web_tests.sh  phase1_e2e.sh  phase1_smoke.sh  web_browser_isolation_test.sh  web_build_proof.sh  web_e2e_smoke.sh  web_multi_project_proof.sh
sdk/afml-sdk/: README.md  exports.toml
sdk/exports-gen/: Cargo.toml
sdk/exports-gen/src/: lib.rs  main.rs
src/: android_lib.rs  ast.rs  collections_tests.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  module_loader.rs  native.rs  parser.rs  phase2_tests.rs  scope_error_tests.rs  span.rs  token.rs  validation.rs
src/bytecode/: mod.rs
src/flutter/: embedder.rs  mod.rs  renderer.rs  scene_builder.rs
src/ir/: builder.rs  convert.rs  instr.rs  mod.rs  types.rs
src/lsp/: server.rs
src/runtime/: android.rs  flutter.rs  flutter_layers.rs  flutter_scene.rs  flutter_vm.rs  java_runtime.rs  mod.rs  web.rs
src/ui/: app.rs  input.rs  mod.rs  runtime_bridge.rs  tree.rs  widget.rs
tests/: validation_test.rs
tools/gui-native-host/: README.md  index.html  package.json  vite.config.ts
(+108 files in other folders)
