[package]
name = "NightScript"
version = "0.1.0"
edition = "2021"

[lib]
name = "nightscript_android"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nightscript"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.10"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
lazy_static = "1.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
