[package]
name = "NightScript"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "nightscript_android"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nightscript"
path = "src/main.rs"

[[bin]]
name = "apexrc"
path = "apexrc/src/main.rs"

[[bin]]
name = "afns-lsp"
path = "src/bin/lsp_server.rs"

[[bin]]
name = "flutter_host"
path = "src/bin/flutter_host.rs"
required-features = ["flutter_host_bin"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.7"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
lazy_static = "1.4"
glfw = { version = "0.55", optional = true }
gl = { version = "0.14", optional = true }
libc = "0.2"
libloading = "0.7"
walkdir = "2.5.0"
dirs = "6.0.0"
toml = "0.6"
blake3 = "1.5"
tower-lsp = "0.20"

[features]
default = []
real_flutter_engine = []
tokio = []
rayon = []
flutter_host_bin = ["dep:glfw", "dep:gl"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
