[package]
name = "NightScript"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "nightscript_android"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nightscript"
path = "src/main.rs"

[[bin]]
name = "apexrc"
path = "apexrc/src/main.rs"

[[bin]]
name = "afns-lsp"
path = "src/bin/lsp_server.rs"



[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.7"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = { version = "0.21", features = ["invocation"] }
lazy_static = "1.4"
glfw = { version = "0.55", optional = true }
gl = { version = "0.14", optional = true }
libc = "0.2"
libloading = "0.7"
walkdir = "2.5.0"
dirs = "6.0.0"
toml = "0.6"
blake3 = "1.5"
tower-lsp = "0.20"
rusqlite = { version = "0.30", features = ["bundled"] }
postgres = "0.18"
redis = "0.21"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
semver = "1.0"
indicatif = "0.17"
hex = "0.4"
exports-gen = { package = "exports-gen", path = "sdk/exports-gen" }
[dev-dependencies]
tempfile = "3.6"

[features]
default = []
real_flutter_engine = []
tokio = []
rayon = []


[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
