[package]
name = "nightscript-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
hex = "0.4"
jsonwebtoken = "7.2"
rand = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "compression-full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tokio-util = "0.7"
toml = "0.8"
flate2 = "1.0"
tar = "0.4"
html-escape = "0.2"
pulldown-cmark = "0.9"
base64ct = "1.6.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
tempfile = "3"
