[package]
name = "exports-gen"
version = "0.1.0"
edition = "2021"

[lib]
name = "exports_gen"
path = "src/lib.rs"

[[bin]]
name = "exports-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
